# CLI_dedup_engine_app

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
src/: main.rs
test_dir/: test_compression.sh  test_pro.sh  test_script.sh  test_team.sh
