[package]
name = "dedup-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
colored = "2.0"
indicatif = "0.18.4"
comfy-table = "7.2.2"
